# computerscience20

./: Pipfile  README.md  TODO.md  conf.py  day-outline.md  pavement.py  pyproject.toml  sphinx_settings.json
_sources/: index.rst  old_template_stuff.rst
_sources/About/: Acknowledgments.rst  ForStudents.rst  ForTeachers.rst
_sources/CareerExploration/: Research.rst  ResearchIdeas.rst  Videos.rst
_sources/ComputingAndSociety/: DigitalSecurityAndPrivacy.rst  HTML.rst  HowComputersWork.rst  HowTheInternetWorks.rst  UnderlyingTechnology.rst  htmlcssquiz.rst
_sources/ConstrainedLanguage/: MidwayPracticeQuiz.rst  MoreChallenges.rst  PracticeQuiz.rst  Step0.rst  Step1.rst  Step10.rst  Step11.rst  Step12.rst  Step13.rst  Step14.rst  Step15.rst  Step16.rst  Step17.rst  Step18.rst  Step19.rst  Step2.rst  Step20.rst  Step3.rst  Step4.rst  Step5.rst  Step6.rst  Step7.rst  Step8.rst  Step9.rst  TransitioningToText.rst  bugs.rst  (+7 more)
_static/: scratch_repeat_until_practice.docx
copyright-permissions/: codeDotOrgVideos.txt  howToThink-DowneyElknerMiller.txt  karelTheRobotLessons-JeffElkner.txt  karelTheRobotLessons-RogerFrank.txt  turtleConfusion-BarryNewell.txt
docs/: .buildinfo  CNAME  assignments.html  genindex.html  index.html  navhelp.html  objects.inv  old_template_stuff.html  search.html  searchindex.js  syntax_examples.html
notes-to-self/: TODO.md  build-instructions.md  day-outline.md  how-to-fork-the-textbook.rst  initial-thoughts.md  reeborg-quizzes.md  snippets.md  stuff_to_fix_from_implementation_team.md
to-be-deleted-eventually/: how-to-think-python-order.rst
(+1843 files in other folders)
