[project]
name = "computerscience20"
version = "0.1.0"
description = "An open textbook intended to cover the requirements of the Saskatchewan Computer Science 20 curriculum."
authors = [
    {name = "Dan Schellenberg",email = "schellenbergd@spsd.sk.ca"}
]
readme = "README.md"
requires-python = "~3.10"
dependencies = [
    "runestone (==6.2.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
